--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proto",
   "version": "0.0.0",
   "description": "Prototype for ELMU",
+  "main": "index.js",
   "scripts": {},
   "keywords": [],
   "license": "MIT",
@@ -12,6 +13,18 @@
     "url": "https://github.com/elmu/proto"
   },
   "private": true,
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "mongodb": "~3.0.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "~8.2.1",
+    "del": "~3.0.0",
+    "eslint": "~4.17.0",
+    "gulp": "~4.0.0",
+    "gulp-eslint": "~4.0.2",
+    "gulp-if": "~2.0.2",
+    "gulp-shell": "~0.6.5",
+    "jest": "~22.1.4",
+    "webpack": "~4.0.0-beta.0"
+  }
 }
