--- a/.eslintrc
+++ b/.eslintrc
@@ -2,22 +2,33 @@
   "extends": "eslint:all",
   "parser": "babel-eslint",
   "env": {
+    "es6": true,
     "browser": true,
     "node": true,
     "jest": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018
   },
   "rules": {
     "array-element-newline": ["error", { "multiline": true }],
     "arrow-parens": ["error", "as-needed"],
     "arrow-body-style": ["off"],
+    "class-methods-use-this": ["off"],
     "dot-location": ["error", "property"],
-    "indent": ["error", 2],
+    "func-style": ["off"],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "max-len": ["off"],
+    "multiline-ternary": ["error", "always-multiline"],
     "no-magic-numbers": ["off"],
+    "no-ternary": ["off"],
     "object-curly-spacing": ["error", "always"],
     "object-curly-newline": ["error", { "consistent": true }],
     "one-var": ["error", "never"],
     "padded-blocks": ["off"],
+    "require-jsdoc": ["off"],
+    "sort-keys": ["off"],
+    "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }],
     "quote-props": ["error", "consistent-as-needed"],
     "quotes": ["error", "single"]
   }
