Add more project setup (DI)

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,22 +14,28 @@
     "array-element-newline": ["error", { "multiline": true }],
     "arrow-parens": ["error", "as-needed"],
     "arrow-body-style": ["off"],
+    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "class-methods-use-this": ["off"],
     "dot-location": ["error", "property"],
+    "func-names": ["error", "as-needed"],
     "func-style": ["off"],
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "max-len": ["off"],
+    "multiline-comment-style": ["off"],
     "multiline-ternary": ["error", "always-multiline"],
     "no-magic-numbers": ["off"],
     "no-ternary": ["off"],
     "object-curly-spacing": ["error", "always"],
     "object-curly-newline": ["error", { "consistent": true }],
+    "object-property-newline": ["error", { "allowAllPropertiesOnSameLine": true }],
+    "object-shorthand": ["error", "consistent-as-needed"],
     "one-var": ["error", "never"],
     "padded-blocks": ["off"],
     "require-jsdoc": ["off"],
     "sort-keys": ["off"],
     "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }],
     "quote-props": ["error", "consistent-as-needed"],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "wrap-iife": ["error", "inside"]
   }
 }
