--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
   },
   "private": true,
   "dependencies": {
-    "ejs": "~2.5.7",
-    "express": "~4.16.2",
-    "markdown-it": "~8.4.0",
-    "mongodb": "~3.0.2"
+    "aurelia-dependency-injection": "~1.3.2",
+    "ejs": "~2.5.8",
+    "express": "~4.16.3",
+    "express-ejs-layouts": "~2.3.1",
+    "markdown-it": "~8.4.1",
+    "mongodb": "~3.0.5",
+    "shortid": "~2.2.8"
   },
   "devDependencies": {
-    "babel-eslint": "~8.2.1",
+    "babel-eslint": "~8.2.2",
     "del": "~3.0.0",
-    "eslint": "~4.17.0",
+    "eslint": "~4.19.1",
     "gulp": "~4.0.0",
     "gulp-eslint": "~4.0.2",
     "gulp-if": "~2.0.2",
+    "gulp-less": "~4.0.0",
     "gulp-shell": "~0.6.5",
-    "jest": "~22.1.4",
-    "webpack": "~4.0.0-beta.0"
+    "jest": "~22.4.3",
+    "webpack": "~4.2.0"
   }
 }
