--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "Prototype for ELMU",
   "main": "src/index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "gulp test"
+  },
   "keywords": [],
   "license": "MIT",
   "author": "ELMU Team <admin@elmu.online>",
