--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Prototype for ELMU",
   "main": "src/index.js",
   "scripts": {
-    "test": "gulp test"
+    "ci": "gulp ci"
   },
   "keywords": [],
   "license": "MIT",
@@ -29,6 +29,7 @@
     "del": "~3.0.0",
     "eslint": "~4.19.1",
     "gulp": "~4.0.0",
+    "gulp-cli": "~2.0.1",
     "gulp-eslint": "~4.0.2",
     "gulp-if": "~2.0.2",
     "gulp-less": "~4.0.0",
