Split ci tasks into prepare, main and cleanup

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Prototype for ELMU",
   "main": "src/index.js",
   "scripts": {
+    "ci:prepare": "gulp ci:prepare",
+    "ci:cleanup": "gulp ci:cleanup",
     "ci": "gulp ci"
   },
   "keywords": [],
