--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    NODE_ENV: "production"
+    NODE_ENV: "development"
 
 phases:
   install:
@@ -10,15 +10,20 @@ phases:
       - echo Entered the install phase...
       # - sudo apt-get update -y && sudo apt-get install -y make apt-transport-https
       - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-      - sudo apt-get update -y && sudo apt-get install -y nodejs build-essential
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-      - sudo apt-get update -y && sudo apt-get install -y yarn
+      - sudo apt-get update -y && sudo apt-get install -y nodejs build-essential yarn
+      # - sudo apt-get update -y && sudo apt-get install -y yarn
   pre_build:
     commands:
       - echo Entered the pre_build phase...
       - yarn install
+      - yarn run ci:prepare
   build:
     commands:
       - echo Entered the build phase...
-      - npm run ci
+      - yarn run ci
+  post_build:
+    commands:
+      - echo Entered the post_build phase...
+      - yarn run ci:cleanup
