--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,18 +2,25 @@ version: 0.2
 
 env:
   variables:
+    NODE_VERSION: "8.11.1"
+    YARN_VERSION: "1.5.1"
     NODE_ENV: "development"
 
 phases:
   install:
     commands:
       - echo Entered the install phase...
-      # - sudo apt-get update -y && sudo apt-get install -y make apt-transport-https
-      - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-      - sudo apt-get update -y && sudo apt-get install -y nodejs build-essential yarn
-      # - sudo apt-get update -y && sudo apt-get install -y yarn
+      # # - sudo apt-get update -y && sudo apt-get install -y make apt-transport-https
+      # - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+      # - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+      # - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      # - sudo apt-get update -y && sudo apt-get install -y nodejs build-essential yarn
+      # # - sudo apt-get update -y && sudo apt-get install -y yarn
+      - wget "https://nodejs.org/download/release/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz" -O "node-v$NODE_VERSION-linux-x64.tar.gz"
+      - tar -xzf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1
+      - rm "node-v$NODE_VERSION-linux-x64.tar.gz"
+      - ln -s /usr/local/bin/node /usr/local/bin/nodejs
+      - npm install -g "yarn@$YARN_VERSION"
   pre_build:
     commands:
       - echo Entered the pre_build phase...
