--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,12 +10,6 @@ phases:
   install:
     commands:
       - echo Entered the install phase...
-      # # - sudo apt-get update -y && sudo apt-get install -y make apt-transport-https
-      # - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-      # - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-      # - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-      # - sudo apt-get update -y && sudo apt-get install -y nodejs build-essential yarn
-      # # - sudo apt-get update -y && sudo apt-get install -y yarn
       - wget "https://nodejs.org/download/release/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz" -O "node-v$NODE_VERSION-linux-x64.tar.gz"
       - tar -xzf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1
       - rm "node-v$NODE_VERSION-linux-x64.tar.gz"
@@ -24,6 +18,7 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
+      - bash -c "$(curl -fsSL https://raw.githubusercontent.com/thii/aws-codebuild-extras/master/install)"
       - yarn install --non-interactive --frozen-lockfile
       - yarn run ci:prepare
   build:
