--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
     docker:
       - image: circleci/buildpack-deps:artful
     steps:
+      - checkout
       - attach_workspace:
           at: "."
       - run:
