--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,15 @@ jobs:
     <<: *defaults
     docker:
       - image: circleci/buildpack-deps:artful
+    environment:
+      - AWS_ACCOUNT_ID: 344601915837
+      - AWS_DEFAULT_REGION: eu-central-1
+      - IMAGE_REPO_NAME: elmu-web
+      - BEANSTALK_PROJECT: elmu-web
+      - BEANSTALK_ENVIRONMENT: Staging
+      - BUILD_ARTIFACTS_BUCKET: elmu-web-build-artifacts
     steps:
+      - setup_remote_docker
       - checkout
       - attach_workspace:
           at: "."
@@ -46,6 +54,9 @@ jobs:
           command: |
             sudo apt-get install -y python-pip libyaml-dev python-dev
             sudo pip install awscli
+      - run:
+          name: Login to AWS ECR
+          command: $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
       - run:
           name: List directory
           command: ls -la
