Restrict releases to master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@ jobs:
       - image: circleci/buildpack-deps:artful
     environment:
       - APPLICATION_NAME: elmu-web
+      - AWS_REGION: eu-central-1
       - AWS_ACCOUNT_ID: "344601915837"
-      - AWS_DEFAULT_REGION: eu-central-1
       - BEANSTALK_ENVIRONMENT_NAME: Staging
       - BEANSTALK_DOCKERRUN_FILE: Dockerrun.aws.json
       - S3_BUILD_ARTIFACTS_BUCKET: elmu-web-build-artifacts
@@ -53,9 +53,9 @@ jobs:
           name: Create application version
           command: |
             echo 'export APPLICATION_VERSION="0.0.$CIRCLE_BUILD_NUM"' >> $BASH_ENV
-            echo 'export APPLICATION_RELEASE_NOTES="$CIRCLE_COMPARE_URL"' >> $BASH_ENV
+            echo 'export APPLICATION_RELEASE_NOTES="Github: $CIRCLE_COMPARE_URL"' >> $BASH_ENV
             echo 'export APPLICATION_DOCKER_IMAGE_NAME="$APPLICATION_NAME:0.0.$CIRCLE_BUILD_NUM"' >> $BASH_ENV
-            echo 'export APPLICATION_DOCKER_REPOSITORY_NAME="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com"' >> $BASH_ENV
+            echo 'export APPLICATION_DOCKER_REPOSITORY_NAME="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com"' >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: Install AWS CLI
@@ -64,7 +64,7 @@ jobs:
             sudo pip install awscli
       - run:
           name: Login to AWS ECR
-          command: $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+          command: $(aws ecr get-login --no-include-email --region $AWS_REGION)
       - run:
           name: Build Docker image
           command: docker build -t $APPLICATION_DOCKER_IMAGE_NAME .
@@ -76,8 +76,7 @@ jobs:
           command: docker push $APPLICATION_DOCKER_REPOSITORY_NAME/$APPLICATION_DOCKER_IMAGE_NAME
       - run:
           name: Prepare deployment artifact
-          command: |
-            sed -i'' -e "s;%IMAGE_NAME%;$APPLICATION_DOCKER_REPOSITORY_NAME/$APPLICATION_DOCKER_IMAGE_NAME;g" ./$BEANSTALK_DOCKERRUN_FILE
+          command: sed -i'' -e "s;%IMAGE_NAME%;$APPLICATION_DOCKER_REPOSITORY_NAME/$APPLICATION_DOCKER_IMAGE_NAME;g" ./$BEANSTALK_DOCKERRUN_FILE
       - run:
           name: Upload deployment artifact
           command: aws s3 cp ./$BEANSTALK_DOCKERRUN_FILE s3://$S3_BUILD_ARTIFACTS_BUCKET/$APPLICATION_VERSION/$BEANSTALK_DOCKERRUN_FILE
@@ -85,7 +84,7 @@ jobs:
           name: Create Elastic Beanstalk application version
           command: |
             aws elasticbeanstalk create-application-version \
-              --region $AWS_DEFAULT_REGION \
+              --region $AWS_REGION \
               --application-name $APPLICATION_NAME \
               --version-label $APPLICATION_VERSION \
               --description "$APPLICATION_RELEASE_NOTES" \
@@ -94,7 +93,7 @@ jobs:
           name: Deploy application version to Staging environment
           command: |
             aws elasticbeanstalk update-environment \
-              --region $AWS_DEFAULT_REGION \
+              --region $AWS_REGION \
               --application-name $APPLICATION_NAME \
               --environment-name $BEANSTALK_ENVIRONMENT_NAME \
               --version-label $APPLICATION_VERSION
@@ -107,3 +106,6 @@ workflows:
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only: master
