--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "init-declarations": ["off"],
     "max-len": ["off"],
+    "max-params": ["error", 5],
+    "max-statements": ["off"],
     "multiline-comment-style": ["off"],
     "multiline-ternary": ["error", "always-multiline"],
     "no-magic-numbers": ["off"],
