--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-shell": "~0.6.5",
     "jest": "~22.4.3",
     "run-sequence": "~2.2.1",
+    "sinon": "~5.0.3",
     "webpack": "~4.5.0"
   }
 }
