--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "private": true,
   "dependencies": {
+    "array-shuffle": "~1.0.1",
     "aurelia-dependency-injection": "~1.3.2",
     "ejs": "~2.5.8",
     "express": "~4.16.3",
     "express-ejs-layouts": "~2.3.1",
+    "he": "~1.1.1",
+    "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
     "mongodb": "~3.0.5",
     "shortid": "~2.2.8"
