Streamline client tooling
* Extract client and server rendering for plugins
* Extract LESS for plugins
* Introduce Babel transpiling
* Add source map support
* Watch seed script in gulp

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "max-statements": ["off"],
     "multiline-comment-style": ["off"],
     "multiline-ternary": ["error", "always-multiline"],
+    "no-empty-function": ["off"],
     "no-magic-numbers": ["off"],
     "no-ternary": ["off"],
     "no-underscore-dangle": ["off"],
