--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "shortid": "~2.2.8"
   },
   "devDependencies": {
+    "babel-core": "~6.26.3",
     "babel-eslint": "~8.2.2",
+    "babel-loader": "~7.1.4",
+    "babel-preset-env": "~1.6.1",
     "del": "~3.0.0",
     "delay": "~2.0.0",
     "docker-cli-js": "~2.2.0",
     "eslint": "~4.19.1",
+    "execa": "~0.10.0",
     "gulp": "~3.9.1",
     "gulp-eslint": "~4.0.2",
     "gulp-if": "~2.0.2",
@@ -42,6 +46,6 @@
     "jest": "~22.4.3",
     "run-sequence": "~2.2.1",
     "sinon": "~5.0.3",
-    "webpack": "~4.5.0"
+    "webpack": "~4.7.0"
   }
 }
