--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "array-shuffle": "~1.0.1",
     "aurelia-dependency-injection": "~1.3.2",
-    "ejs": "~2.5.8",
+    "babel-polyfill": "~6.26.0",
+    "ejs": "~2.6.1",
     "express": "~4.16.3",
-    "express-ejs-layouts": "~2.3.1",
+    "express-ejs-layouts": "~2.4.0",
     "he": "~1.1.1",
     "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "babel-core": "~6.26.3",
-    "babel-eslint": "~8.2.2",
+    "babel-eslint": "~8.2.3",
     "babel-loader": "~7.1.4",
     "babel-preset-env": "~1.6.1",
     "del": "~3.0.0",
@@ -40,12 +41,14 @@
     "eslint": "~4.19.1",
     "execa": "~0.10.0",
     "gulp": "~3.9.1",
+    "gulp-csso": "~3.0.1",
     "gulp-eslint": "~4.0.2",
     "gulp-if": "~2.0.2",
     "gulp-less": "~4.0.0",
+    "gulp-sourcemaps": "~2.6.4",
     "jest": "~22.4.3",
     "run-sequence": "~2.2.1",
-    "sinon": "~5.0.3",
-    "webpack": "~4.7.0"
+    "sinon": "~5.0.7",
+    "webpack": "~4.8.0"
   }
 }
