--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "dependencies": {
     "array-shuffle": "~1.0.1",
     "aurelia-dependency-injection": "~1.3.2",
+    "babel-plugin-transform-object-rest-spread": "~6.26.0",
     "babel-polyfill": "~6.26.0",
+    "babel-preset-env": "~1.7.0",
+    "babel-preset-react": "~6.24.1",
+    "babel-register": "~6.26.0",
     "ejs": "~2.6.1",
     "express": "~4.16.3",
     "express-ejs-layouts": "~2.4.0",
@@ -28,17 +32,20 @@
     "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
     "mongodb": "~3.0.5",
+    "prop-types": "~15.6.1",
+    "react": "~16.3.2",
+    "react-dom": "~16.3.2",
     "shortid": "~2.2.8"
   },
   "devDependencies": {
     "babel-core": "~6.26.3",
     "babel-eslint": "~8.2.3",
     "babel-loader": "~7.1.4",
-    "babel-preset-env": "~1.6.1",
     "del": "~3.0.0",
     "delay": "~2.0.0",
     "docker-cli-js": "~2.2.0",
     "eslint": "~4.19.1",
+    "eslint-plugin-react": "~7.8.2",
     "execa": "~0.10.0",
     "gulp": "~3.9.1",
     "gulp-csso": "~3.0.1",
