Enable inline editing
* Adjust database operations for versioning
* Refactor stores
* Adjust Markdown editor
* Adjust db seed script
* Move elmu-server to its own class

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,14 +25,17 @@
     "id-length": ["off"],
     "indent": ["error", 2, { "SwitchCase": 1, "ignoredNodes": ["JSXOpeningElement"] }],
     "init-declarations": ["off"],
+    "line-comment-position": ["off"],
     "max-len": ["off"],
-    "max-params": ["error", 5],
+    "max-params": ["error", 8],
     "max-statements": ["off"],
     "multiline-comment-style": ["off"],
     "multiline-ternary": ["error", "always-multiline"],
+    "newline-per-chained-call": ["off"],
     "no-confusing-arrow": ["off"],
     "no-empty-function": ["off"],
     "no-extra-parens": ["error", "all", { ignoreJSX: "all" }],
+    "no-inline-comments": ["off"],
     "no-magic-numbers": ["off"],
     "no-ternary": ["off"],
     "no-underscore-dangle": ["off"],
