--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
     "shortid": "~2.2.8",
-    "superagent": "~3.8.3"
+    "superagent": "~3.8.3",
+    "video.js": "~7.0.3",
+    "videojs-youtube": "~2.5.0"
   },
   "devDependencies": {
     "babel-core": "~6.26.3",
