Uncomment and fix further tests for document service

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "init-declarations": ["off"],
     "line-comment-position": ["off"],
     "max-len": ["off"],
+    "max-lines": ["off"],
     "max-params": ["error", 8],
     "max-statements": ["off"],
     "multiline-comment-style": ["off"],
@@ -53,6 +54,7 @@
     "quote-props": ["error", "consistent-as-needed"],
     "quotes": ["error", "single"],
     "wrap-iife": ["error", "inside"],
+    "react/destructuring-assignment": ["off"],
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
