--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "no-confusing-arrow": ["off"],
     "no-empty-function": ["off"],
     "no-extra-parens": ["error", "all", { ignoreJSX: "all" }],
+    "no-implicit-coercion": ["error", { "allow": ["!!", "~"] }],
     "no-inline-comments": ["off"],
     "no-magic-numbers": ["off"],
     "no-ternary": ["off"],
@@ -58,6 +59,7 @@
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
+    "react/jsx-max-depth": ["error", { "max": 5 }],
     "react/jsx-max-props-per-line": ["error", { "maximum": 1, "when": "multiline" }],
     "react/jsx-no-literals": ["off"],
     "react/jsx-one-expression-per-line": ["off"],
