--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "babel-register": "~6.26.0",
     "body-parser": "~1.18.3",
     "classnames": "~2.2.5",
-    "ejs": "~2.6.1",
     "express": "~4.16.3",
-    "express-ejs-layouts": "~2.4.0",
-    "he": "~1.1.1",
     "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
     "mongodb": "~3.0.5",
@@ -52,11 +49,13 @@
     "eslint": "~4.19.1",
     "eslint-plugin-react": "~7.8.2",
     "execa": "~0.10.0",
+    "glob": "~7.1.2",
     "gulp": "~3.9.1",
     "gulp-csso": "~3.0.1",
     "gulp-eslint": "~4.0.2",
     "gulp-if": "~2.0.2",
     "gulp-less": "~4.0.0",
+    "gulp-plumber": "~1.2.0",
     "gulp-sourcemaps": "~2.6.4",
     "jest": "~22.4.3",
     "run-sequence": "~2.2.1",
