Add more advanced styling and audio plugin

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "antd": "~3.6.2",
     "array-shuffle": "~1.0.1",
     "aurelia-dependency-injection": "~1.3.2",
     "babel-plugin-transform-object-rest-spread": "~6.26.0",
@@ -26,7 +27,6 @@
     "babel-preset-react": "~6.24.1",
     "babel-register": "~6.26.0",
     "body-parser": "~1.18.3",
-    "classnames": "~2.2.5",
     "express": "~4.16.3",
     "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
@@ -54,7 +54,7 @@
     "gulp-csso": "~3.0.1",
     "gulp-eslint": "~4.0.2",
     "gulp-if": "~2.0.2",
-    "gulp-less": "~4.0.0",
+    "gulp-less": "~3.5.0",
     "gulp-plumber": "~1.2.0",
     "gulp-sourcemaps": "~2.6.4",
     "jest": "~22.4.3",
