Add CDN client using Minio

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "express": "~4.16.3",
     "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
+    "minio": "~6.0.0",
     "mongodb": "~3.0.5",
+    "parseboolean": "~1.0.0",
     "prop-types": "~15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
