--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,13 @@ jobs:
     docker:
       - image: circleci/node:8.11.1
       - image: mvertes/alpine-mongo:3.4.10-0
+      - image: minio/minio:RELEASE.2018-06-09T03-43-35Z
+        environment:
+          MINIO_ACCESS_KEY: "UVDXF41PYEAX0PXD8826"
+          MINIO_SECRET_KEY: "SXtajmM3uahrQ1ALECh3Z3iKT76s2s5GBJlbQMZx"
+          MINIO_BROWSER: "on"
+          MINIO_DOMAIN: "localhost"
+        command: ["server", "/data"]
     environment:
       - NODE_ENV: development
       - YARN_CACHE_FOLDER: ~/.cache/yarn
