Enable working with a CDN
* Add a S3-compatible client
* Create a basic file explorer component
* Use fonts locally instead of loading them from a CDN

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "arrow-parens": ["error", "as-needed"],
     "arrow-body-style": ["off"],
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+    "capitalized-comments": ["error", "always", { "ignoreConsecutiveComments": true }],
     "class-methods-use-this": ["off"],
     "dot-location": ["error", "property"],
     "func-names": ["error", "as-needed"],
