--- a/package.json
+++ b/package.json
@@ -21,23 +21,30 @@
     "antd": "~3.6.2",
     "array-shuffle": "~1.0.1",
     "aurelia-dependency-injection": "~1.3.2",
+    "auto-bind": "~1.2.1",
     "babel-plugin-transform-object-rest-spread": "~6.26.0",
     "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.7.0",
     "babel-preset-react": "~6.24.1",
     "babel-register": "~6.26.0",
     "body-parser": "~1.18.3",
+    "classnames": "~2.2.6",
     "express": "~4.16.3",
     "htmlescape": "~1.1.1",
     "markdown-it": "~8.4.1",
+    "mime": "~2.3.1",
     "minio": "~6.0.0",
+    "moment": "~2.22.2",
     "mongodb": "~3.0.5",
+    "multer": "~1.3.0",
     "parseboolean": "~1.0.0",
+    "pretty-bytes": "~5.1.0",
     "prop-types": "~15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
     "shortid": "~2.2.8",
     "superagent": "~3.8.3",
+    "thenby": "~1.2.5",
     "video.js": "~7.0.3",
     "videojs-youtube": "~2.5.0"
   },
