--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "~4.16.3",
     "he": "~1.1.1",
     "htmlescape": "~1.1.1",
+    "iframe-resizer": "~3.6.1",
     "markdown-it": "~8.4.1",
     "mime": "~2.3.1",
     "minio": "~6.0.0",
