Fix H5P loading from CDN

--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "prop-types": "~15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
+    "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shortid": "~2.2.8",
+    "stream-to-array": "~2.3.0",
     "superagent": "~3.8.3",
     "thenby": "~1.2.5",
     "toposort": "~2.0.2",
