--- a/.eslintrc
+++ b/.eslintrc
@@ -50,6 +50,7 @@
     "one-var": ["error", "never"],
     "operator-linebreak": ["error", "before"],
     "padded-blocks": ["off"],
+    "prefer-destructuring": ["off"],
     "require-jsdoc": ["off"],
     "sort-keys": ["off"],
     "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }],
