--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
     "markdown-it": "~8.4.1",
+    "mem": "~3.0.1",
     "mime": "~2.3.1",
     "minio": "~6.0.0",
     "moment": "~2.22.2",
@@ -44,6 +45,7 @@
     "parseboolean": "~1.0.0",
     "pretty-bytes": "~5.1.0",
     "prop-types": "~15.6.1",
+    "quick-lru": "~1.1.0",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
     "read-all-stream": "~3.1.0",
