--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "decompress": "~4.2.0",
     "del": "~3.0.0",
     "express": "~4.16.3",
+    "fast-deep-equal": "~2.0.1",
     "he": "~1.1.1",
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
