--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "The elmu website",
   "main": "src/index.js",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "scripts": {
     "ci:prepare": "gulp ci:prepare",
     "ci:cleanup": "gulp ci:cleanup",
@@ -18,11 +21,12 @@
   },
   "private": true,
   "dependencies": {
-    "antd": "~3.6.2",
+    "antd": "~3.6.4",
     "array-shuffle": "~1.0.1",
     "async": "~2.6.1",
-    "aurelia-dependency-injection": "~1.3.2",
+    "aurelia-dependency-injection": "~1.4.1",
     "auto-bind": "~1.2.1",
+    "aws-sdk": "~2.266.1",
     "babel-plugin-transform-object-rest-spread": "~6.26.0",
     "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.7.0",
@@ -30,11 +34,11 @@
     "babel-register": "~6.26.0",
     "body-parser": "~1.18.3",
     "classnames": "~2.2.6",
+    "core-js": "~2.5.7",
     "decompress": "~4.2.0",
     "del": "~3.0.0",
     "express": "~4.16.3",
     "fast-deep-equal": "~2.0.1",
-    "he": "~1.1.1",
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
     "markdown-it": "~8.4.1",
@@ -43,16 +47,17 @@
     "minio": "~6.0.0",
     "moment": "~2.22.2",
     "mongodb": "~3.0.5",
-    "multer": "~1.3.0",
+    "multer": "~1.3.1",
     "parseboolean": "~1.0.0",
     "pretty-bytes": "~5.1.0",
-    "prop-types": "~15.6.1",
+    "prop-types": "~15.6.2",
     "quick-lru": "~1.1.0",
-    "react": "~16.3.2",
-    "react-dom": "~16.3.2",
+    "react": "~16.4.1",
+    "react-dom": "~16.4.1",
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shortid": "~2.2.8",
+    "split-array": "~1.0.1",
     "stream-to-array": "~2.3.0",
     "superagent": "~3.8.3",
     "thenby": "~1.2.5",
@@ -62,12 +67,11 @@
   },
   "devDependencies": {
     "babel-core": "~6.26.3",
-    "babel-eslint": "~8.2.3",
+    "babel-eslint": "~8.2.5",
     "babel-loader": "~7.1.4",
-    "delay": "~2.0.0",
+    "delay": "~3.0.0",
     "docker-cli-js": "~2.2.0",
-    "eslint": "~4.19.1",
-    "eslint-plugin-react": "~7.8.2",
+    "eslint-plugin-react": "~7.10.0",
     "execa": "~0.10.0",
     "glob": "~7.1.2",
     "gulp": "~3.9.1",
@@ -77,10 +81,10 @@
     "gulp-less": "~3.5.0",
     "gulp-plumber": "~1.2.0",
     "gulp-sourcemaps": "~2.6.4",
-    "jest": "~23.1.0",
+    "jest": "~23.2.0",
     "run-sequence": "~2.2.1",
-    "sinon": "~5.0.7",
-    "webpack": "~4.8.0",
-    "webpack-bundle-analyzer": "~2.11.2"
+    "sinon": "~6.0.1",
+    "webpack": "~4.14.0",
+    "webpack-bundle-analyzer": "~2.13.1"
   }
 }
