--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "quick-lru": "~1.1.0",
     "react": "~16.4.1",
     "react-dom": "~16.4.1",
+    "react-sortable-hoc": "~0.8.3",
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shortid": "~2.2.8",
