--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "indent": ["error", 2, { "SwitchCase": 1, "ignoredNodes": ["JSXOpeningElement"] }],
     "init-declarations": ["off"],
     "line-comment-position": ["off"],
+    "linebreak-style": ["off"],
     "max-len": ["off"],
     "max-lines": ["off"],
     "max-params": ["error", 8],
