--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -1,7 +1,45 @@
 files:
-    "/etc/nginx/conf.d/proxy.conf" :
-        mode: "000755"
-        owner: root
-        group: root
-        content: |
-           client_max_body_size 25M;
+  "/etc/nginx/sites-available/elasticbeanstalk-nginx-docker-proxy.conf":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      map $http_upgrade $connection_upgrade {
+        default        "upgrade";
+        ""             "";
+      }
+
+      server {
+        listen 80;
+        server_name ~^www\.(?<domain>.+)$;
+
+        return 301 https://$domain$request_uri;
+      }
+
+      server {
+        listen 80 default_server;
+        server_name _;
+
+        access_log    /var/log/nginx/access.log;
+
+        gzip on;
+        gzip_comp_level 4;
+        gzip_types text/html text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+        client_max_body_size 25M;
+
+        if ($http_x_forwarded_proto = "http") {
+          return 301 https://$host$request_uri;
+        }
+
+        location / {
+          proxy_pass            http://docker;
+          proxy_http_version    1.1;
+
+          proxy_set_header      Connection          $connection_upgrade;
+          proxy_set_header      Upgrade             $http_upgrade;
+          proxy_set_header      Host                $host;
+          proxy_set_header      X-Real-IP           $remote_addr;
+          proxy_set_header      X-Forwarded-For     $proxy_add_x_forwarded_for;
+        }
+      }
