Change DnD library and refine section reordering

--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
     "prop-types": "~15.6.2",
     "quick-lru": "~1.1.0",
     "react": "~16.4.1",
+    "react-beautiful-dnd": "~8.0.1",
     "react-dom": "~16.4.1",
-    "react-sortable-hoc": "~0.8.3",
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
+    "shallow-equal": "~1.0.0",
     "shortid": "~2.2.8",
     "split-array": "~1.0.1",
     "stream-to-array": "~2.3.0",
