--- a/.eslintrc
+++ b/.eslintrc
@@ -60,6 +60,8 @@
     "quotes": ["error", "single"],
     "wrap-iife": ["error", "inside"],
     "react/destructuring-assignment": ["off"],
+    "react/forbid-component-props": ["error", { "forbid": [{ "propName": "style", "allowedFor": ["Icon"] }] }],
+    "react/forbid-prop-types": ["off"],
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
@@ -69,6 +71,7 @@
     "react/jsx-one-expression-per-line": ["off"],
     "react/jsx-sort-props": ["off"],
     "react/no-danger": ["off"],
+    "react/no-multi-comp": ["off"],
     "react/no-set-state": ["off"],
     "react/require-optimization": ["off"]
   }
