--- a/.eslintrc
+++ b/.eslintrc
@@ -28,8 +28,10 @@
     "init-declarations": ["off"],
     "line-comment-position": ["off"],
     "linebreak-style": ["off"],
-    "max-len": ["off"],
-    "max-lines": ["off"],
+    "max-classes-per-file": ["off"],
+    "max-len": ["error", { "code": 160, "ignoreStrings": true, "ignoreTemplateLiterals": true }],
+    "max-lines": ["error", { "max": 500, "skipBlankLines": true, "skipComments": true }],
+    "max-lines-per-function": ["off"],
     "max-params": ["error", 8],
     "max-statements": ["off"],
     "multiline-comment-style": ["off"],
