--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "private": true,
   "dependencies": {
-    "antd": "~3.6.4",
+    "antd": "~3.6.6",
     "array-shuffle": "~1.0.1",
     "async": "~2.6.1",
     "aurelia-dependency-injection": "~1.4.1",
     "auto-bind": "~1.2.1",
-    "aws-sdk": "~2.266.1",
+    "aws-sdk": "~2.271.1",
     "babel-plugin-transform-object-rest-spread": "~6.26.0",
     "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.7.0",
@@ -41,53 +41,55 @@
     "fast-deep-equal": "~2.0.1",
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
+    "immutable": "~3.8.2",
     "markdown-it": "~8.4.1",
     "mem": "~3.0.1",
     "mime": "~2.3.1",
     "minio": "~6.0.0",
     "moment": "~2.22.2",
-    "mongodb": "~3.0.5",
+    "mongodb": "~3.0.11",
     "multer": "~1.3.1",
     "parseboolean": "~1.0.0",
     "pretty-bytes": "~5.1.0",
     "prop-types": "~15.6.2",
     "quick-lru": "~1.1.0",
     "react": "~16.4.1",
-    "react-beautiful-dnd": "~8.0.1",
+    "react-beautiful-dnd": "~8.0.2",
     "react-dom": "~16.4.1",
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shallow-equal": "~1.0.0",
-    "shortid": "~2.2.8",
+    "shortid": "~2.2.11",
     "split-array": "~1.0.1",
     "stream-to-array": "~2.3.0",
     "superagent": "~3.8.3",
-    "thenby": "~1.2.5",
+    "thenby": "~1.2.6",
     "toposort": "~2.0.2",
-    "video.js": "~7.0.3",
+    "video.js": "~7.0.5",
     "videojs-youtube": "~2.5.0"
   },
   "devDependencies": {
     "acorn": "~5.7.1",
     "babel-core": "~6.26.3",
     "babel-eslint": "~8.2.5",
-    "babel-loader": "~7.1.4",
+    "babel-loader": "~7.1.5",
     "delay": "~3.0.0",
     "docker-cli-js": "git://github.com/elmu/docker-cli-js.git#linefix",
+    "eslint": "~5.1.0",
     "eslint-plugin-react": "~7.10.0",
     "execa": "~0.10.0",
     "glob": "~7.1.2",
     "gulp": "~3.9.1",
     "gulp-csso": "~3.0.1",
-    "gulp-eslint": "~4.0.2",
+    "gulp-eslint": "~5.0.0",
     "gulp-if": "~2.0.2",
     "gulp-less": "~3.5.0",
     "gulp-plumber": "~1.2.0",
     "gulp-sourcemaps": "~2.6.4",
-    "jest": "~23.2.0",
+    "jest": "~23.3.0",
     "run-sequence": "~2.2.1",
-    "sinon": "~6.0.1",
-    "webpack": "~4.14.0",
+    "sinon": "~6.1.3",
+    "webpack": "~4.15.1",
     "webpack-bundle-analyzer": "~2.13.1"
   }
 }
