Add X-Forwarded-Proto to HTTP headers in NGNX proxy

--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -9,6 +9,11 @@ files:
         ""             "";
       }
 
+      map $http_x_forwarded_proto $real_proto {
+        default        $http_x_forwarded_proto;
+        ""             $scheme;
+      }
+
       server {
         listen 80;
         server_name ~^www\.(?<domain>.+)$;
@@ -22,15 +27,15 @@ files:
 
         access_log    /var/log/nginx/access.log;
 
+        if ($http_x_forwarded_proto = "http") {
+          return 301 https://$host$request_uri;
+        }
+
         gzip on;
         gzip_comp_level 4;
         gzip_types text/html text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
         client_max_body_size 25M;
-
-        if ($http_x_forwarded_proto = "http") {
-          return 301 https://$host$request_uri;
-        }
 
         location / {
           proxy_pass            http://docker;
@@ -41,5 +46,6 @@ files:
           proxy_set_header      Host                $host;
           proxy_set_header      X-Real-IP           $remote_addr;
           proxy_set_header      X-Forwarded-For     $proxy_add_x_forwarded_for;
+          proxy_set_header      X-Forwarded-Proto   $real_proto;
         }
       }
