--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     <<: *defaults
     docker:
       - image: circleci/node:10.5.0
+      - image: djfarrelly/maildev:1.0.0-rc2
       - image: mvertes/alpine-mongo:3.6.5-0
       - image: minio/minio:RELEASE.2018-07-10T01-42-11Z
         environment:
