--- a/.eslintrc
+++ b/.eslintrc
@@ -67,7 +67,7 @@
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
-    "react/jsx-max-depth": ["error", { "max": 5 }],
+    "react/jsx-max-depth": ["off"],
     "react/jsx-max-props-per-line": ["error", { "maximum": 1, "when": "multiline" }],
     "react/jsx-no-literals": ["off"],
     "react/jsx-one-expression-per-line": ["off"],
