--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "private": true,
   "dependencies": {
     "antd": "~3.6.6",
+    "any-base": "~1.1.0",
     "array-shuffle": "~1.0.1",
     "async": "~2.6.1",
     "aurelia-dependency-injection": "~1.4.1",
@@ -32,12 +33,15 @@
     "babel-preset-env": "~1.7.0",
     "babel-preset-react": "~6.24.1",
     "babel-register": "~6.26.0",
+    "bcrypt": "~3.0.0",
     "body-parser": "~1.18.3",
     "classnames": "~2.2.6",
+    "connect-mongo": "~2.0.1",
     "core-js": "~2.5.7",
     "decompress": "~4.2.0",
     "del": "~3.0.0",
     "express": "~4.16.3",
+    "express-session": "~1.15.6",
     "fast-deep-equal": "~2.0.1",
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
@@ -49,7 +53,10 @@
     "moment": "~2.22.2",
     "mongodb": "~3.0.11",
     "multer": "~1.3.1",
+    "nodemailer": "~4.6.7",
     "parseboolean": "~1.0.0",
+    "passport": "~0.4.0",
+    "passport-local": "~1.0.0",
     "pretty-bytes": "~5.1.0",
     "prop-types": "~15.6.2",
     "quick-lru": "~1.1.0",
@@ -59,12 +66,12 @@
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shallow-equal": "~1.0.0",
-    "shortid": "~2.2.11",
     "split-array": "~1.0.1",
     "stream-to-array": "~2.3.0",
     "superagent": "~3.8.3",
     "thenby": "~1.2.6",
     "toposort": "~2.0.2",
+    "uuid": "~3.3.2",
     "video.js": "~7.0.5",
     "videojs-youtube": "~2.5.0"
   },
