--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,11 @@
       "jsx": true
     }
   },
+  "settings": {
+    "react": {
+      "version": "16.5"
+    }
+  },
   "rules": {
     "array-element-newline": ["off"],
     "arrow-parens": ["error", "as-needed"],
@@ -60,6 +65,7 @@
     "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }],
     "quote-props": ["error", "consistent-as-needed"],
     "quotes": ["error", "single"],
+    "require-unicode-regexp": ["off"],
     "wrap-iife": ["error", "inside"],
     "react/destructuring-assignment": ["off"],
     "react/forbid-component-props": ["error", { "forbid": [{ "propName": "style", "allowedFor": ["Icon"] }] }],
