--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "~16.5.0",
     "react-beautiful-dnd": "~8.0.2",
     "react-dom": "~16.5.0",
+    "react-youtube-embed": "~1.0.2",
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shallow-equal": "~1.0.0",
@@ -71,9 +72,7 @@
     "superagent": "~3.8.3",
     "thenby": "~1.3.0",
     "toposort": "~2.0.2",
-    "uuid": "~3.3.2",
-    "video.js": "~7.0.5",
-    "videojs-youtube": "~2.5.0"
+    "uuid": "~3.3.2"
   },
   "devDependencies": {
     "acorn": "~5.7.2",
