--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "superagent": "~3.8.3",
     "thenby": "~1.3.0",
     "toposort": "~2.0.2",
+    "tree-crawl": "~1.0.5",
     "uuid": "~3.3.2"
   },
   "devDependencies": {
