--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
     "immutable": "~3.8.2",
+    "make-error": "~1.3.5",
     "markdown-it": "~8.4.2",
     "mem": "~3.0.1",
     "mime": "~2.3.1",
@@ -73,6 +74,7 @@
     "thenby": "~1.3.0",
     "toposort": "~2.0.2",
     "tree-crawl": "~1.0.5",
+    "urlencode": "~1.1.0",
     "uuid": "~3.3.2"
   },
   "devDependencies": {
