--- a/package.json
+++ b/package.json
@@ -64,11 +64,15 @@
     "quick-lru": "~1.1.0",
     "react": "~16.5.0",
     "react-beautiful-dnd": "~8.0.2",
+    "react-dimensions": "~1.3.1",
     "react-dom": "~16.5.0",
+    "react-piano": "~3.1.1",
+    "react-vis": "~1.11.5",
     "react-youtube-embed": "~1.0.2",
     "read-all-stream": "~3.1.0",
     "recursive-readdir": "~2.2.2",
     "shallow-equal": "~1.0.0",
+    "soundfont-player": "~0.11.0",
     "split-array": "~1.0.1",
     "stream-to-array": "~2.3.0",
     "superagent": "~3.8.3",
