--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-beautiful-dnd": "~8.0.2",
     "react-dimensions": "~1.3.1",
     "react-dom": "~16.5.0",
+    "react-highlighter": "~0.4.3",
     "react-piano": "~3.1.1",
     "react-vis": "~1.11.5",
     "react-youtube-embed": "~1.0.2",
