Add user profile functionality
Resolves #45

--- a/.eslintrc
+++ b/.eslintrc
@@ -45,7 +45,7 @@
     "newline-per-chained-call": ["off"],
     "no-confusing-arrow": ["off"],
     "no-empty-function": ["off"],
-    "no-extra-parens": ["error", "all", { ignoreJSX: "all" }],
+    "no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false, ignoreJSX: "all" }],
     "no-implicit-coercion": ["error", { "allow": ["!!", "~"] }],
     "no-inline-comments": ["off"],
     "no-magic-numbers": ["off"],
@@ -71,6 +71,7 @@
     "react/forbid-component-props": ["error", { "forbid": [{ "propName": "style", "allowedFor": ["Icon"] }] }],
     "react/forbid-prop-types": ["off"],
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
+    "react/jsx-handler-names": ["error", { eventHandlerPrefix: "(handle)", eventHandlerPropPrefix: "(on|before|after)" }],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
     "react/jsx-max-depth": ["off"],
