--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "express": "~4.16.3",
     "express-session": "~1.15.6",
     "fast-deep-equal": "~2.0.1",
+    "flag-icon-css": "~3.3.0",
+    "gravatar": "~1.8.0",
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
     "immutable": "~3.8.2",
+    "locale-compare": "~1.0.0",
     "make-error": "~1.3.5",
     "markdown-it": "~8.4.2",
     "mem": "~3.0.1",
@@ -106,6 +109,7 @@
     "less-plugin-autoprefix": "~2.0.0",
     "run-sequence": "~2.2.1",
     "sinon": "~6.2.0",
+    "stream-to-promise": "~2.2.0",
     "umzug": "~2.2.0",
     "webpack": "~4.17.2",
     "webpack-bundle-analyzer": "~2.13.1"
