--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "private": true,
   "dependencies": {
+    "acho": "~4.0.4",
     "antd": "~3.9.1",
     "any-base": "~1.1.0",
     "array-shuffle": "~1.0.1",
@@ -49,6 +50,7 @@
     "htmlescape": "~1.1.1",
     "iframe-resizer": "~3.6.1",
     "immutable": "~3.8.2",
+    "js-cookie": "~2.2.0",
     "locale-compare": "~1.0.0",
     "make-error": "~1.3.5",
     "markdown-it": "~8.4.2",
@@ -58,6 +60,7 @@
     "moment": "~2.24.0",
     "mongodb": "~3.0.11",
     "multer": "~1.3.1",
+    "node-graceful": "~1.0.1",
     "nodemailer": "~4.6.8",
     "parseboolean": "~1.0.0",
     "passport": "~0.4.0",
