Update babel and webpack

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["env", "stage-3", "react"],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": [
+    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    "@babel/preset-react"
+  ]
 }
