--- a/package.json
+++ b/package.json
@@ -21,25 +21,24 @@
   },
   "private": true,
   "dependencies": {
+    "@babel/core": "~7.4.4",
+    "@babel/polyfill": "~7.4.4",
+    "@babel/preset-env": "~7.4.4",
+    "@babel/preset-react": "~7.0.0",
+    "@babel/register": "~7.4.4",
     "acho": "~4.0.4",
     "antd": "~3.9.1",
     "any-base": "~1.1.0",
     "array-shuffle": "~1.0.1",
     "async": "~2.6.1",
-    "aurelia-dependency-injection": "~1.4.1",
+    "aurelia-dependency-injection": "~1.4.2",
     "auto-bind": "~1.2.1",
     "aws-sdk": "~2.310.0",
-    "babel-plugin-transform-object-rest-spread": "~6.26.0",
-    "babel-polyfill": "~6.26.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-react": "~6.24.1",
-    "babel-preset-stage-3": "~6.24.1",
-    "babel-register": "~6.26.0",
     "bcrypt": "~3.0.0",
     "body-parser": "~1.18.3",
     "classnames": "~2.2.6",
     "connect-mongo": "~2.0.1",
-    "core-js": "~2.5.7",
+    "core-js": "~3.0.1",
     "decompress": "~4.2.0",
     "del": "~3.0.0",
     "express": "~4.16.3",
@@ -92,9 +91,9 @@
   },
   "devDependencies": {
     "acorn": "~5.7.2",
-    "babel-core": "~6.26.3",
-    "babel-eslint": "~8.2.5",
-    "babel-loader": "~7.1.5",
+    "babel-eslint": "~10.0.1",
+    "babel-jest": "~24.8.0",
+    "babel-loader": "~8.0.5",
     "delay": "~3.0.0",
     "docker-cli-js": "~2.5.1",
     "eslint": "~5.5.0",
@@ -108,13 +107,13 @@
     "gulp-less": "~3.5.0",
     "gulp-plumber": "~1.2.0",
     "gulp-sourcemaps": "~2.6.4",
-    "jest": "~23.5.0",
+    "jest": "~24.8.0",
     "less-plugin-autoprefix": "~2.0.0",
     "run-sequence": "~2.2.1",
     "sinon": "~6.2.0",
     "stream-to-promise": "~2.2.0",
     "umzug": "~2.2.0",
-    "webpack": "~4.17.2",
-    "webpack-bundle-analyzer": "~2.13.1"
+    "webpack": "~4.30.0",
+    "webpack-bundle-analyzer": "~3.3.2"
   }
 }
