--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs:
       - run:
           name: Install AWS CLI
           command: |
+            sudo apt-get update
             sudo apt-get install -y python-pip libyaml-dev python-dev
             sudo pip install awscli
       - run:
