--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "uuid": "~3.3.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "~5.9.0",
     "acorn": "~5.7.2",
     "babel-eslint": "~10.0.1",
     "babel-jest": "~24.8.0",
