--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "decompress": "~4.2.0",
     "del": "~3.0.0",
     "express": "~4.16.3",
+    "express-async-errors": "~3.1.1",
     "express-session": "~1.15.6",
     "fast-deep-equal": "~2.0.1",
     "flag-icon-css": "~3.3.0",
+    "format-error": "~1.0.0",
     "gravatar": "~1.8.0",
     "htmlescape": "~1.1.1",
+    "http-errors": "~1.7.3",
     "iframe-resizer": "~3.6.1",
     "immutable": "~3.8.2",
     "js-cookie": "~2.2.0",
@@ -63,6 +66,7 @@
     "multer": "~1.3.1",
     "node-graceful": "~1.0.1",
     "nodemailer": "~4.6.8",
+    "parse5": "~5.1.0",
     "parseboolean": "~1.0.0",
     "passport": "~0.4.0",
     "passport-local": "~1.0.0",
