--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@fortawesome/fontawesome-free": "~5.9.0",
     "abcjs": "~5.7.0",
     "acho": "~4.0.4",
-    "antd": "~3.9.1",
+    "antd": "3.10.0",
     "any-base": "~1.1.0",
     "array-shuffle": "~1.0.1",
     "async": "~2.6.1",
@@ -73,6 +73,7 @@
     "pretty-bytes": "~5.1.0",
     "prop-types": "~15.6.2",
     "quick-lru": "~1.1.0",
+    "rc-form": "^2.1.0",
     "react": "~16.8.6",
     "react-beautiful-dnd": "~11.0.2",
     "react-dimensions": "~1.3.1",
